--- a/src/pages/01/index.mdx
+++ b/src/pages/01/index.mdx
@@ -1,8 +1,11 @@
 import { Link } from 'gatsby'
 import Layout from '../../components/layout'
 import SEO from '../../components/seo'
+import Component01 from "../../components/Component01"
 
 <SEO title="Page two" />
+
+<Component01 />
 
 # Hi from the second page
 
