💪 #11 各種ファイルのtsx化

--- a/src/pages/01/index.mdx
+++ b/src/pages/01/index.mdx
@@ -1,5 +1,4 @@
 import { Link } from 'gatsby'
-import Layout from '../../components/layout'
 import SEO from '../../components/seo'
 import Component01 from "../../components/Component01"
 
@@ -7,8 +6,5 @@ import Component01 from "../../components/Component01"
 
 <Component01 />
 
-# Hi from the second page
+# 01ページです。
 
-Welcome to page 2
-
-<Link to="/">Go back to the homepage</Link>
