--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -3,9 +3,9 @@ title: "Slide Up"
 slug: "animation01"
 ---
 
-import Test from "../../components/01/test"
+import Component from "../../components/01/index"
 
-<Test />
+<Component />
 
 * <div>1+1={1+1}</div>
 * <div>slug: {props.frontmatter.slug}</div>
