--- a/src/posts/02/index.mdx
+++ b/src/posts/02/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Slide Up"
-slug: "animation01"
+slug: "animation02"
 ---
 
 import Component from "../../components/01/index"
@@ -12,7 +12,7 @@ import * as Styles from "../../scss/_box.module.scss"
 
 # hoge
 
-## こんにちは
+## こんにちは02
 
 * <div>1+1={1+1}</div>
 * <div>slug: {props.frontmatter.slug}</div>
