--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -5,10 +5,13 @@ slug: "animation01"
 
 import Component from "../../components/01/index"
 import * as Styles from "../../scss/_box.module.scss"
+import * as Srtles2 from "../../styles/_blogTemplate.module.scss"
 
 <div className={Styles.boxWrapper}>
 <Component />
 </div>
+
+<main>
 
 # hoge
 
@@ -21,6 +24,11 @@ import * as Styles from "../../scss/_box.module.scss"
 テストだよ
 
 <br />
+
+```javascript
+const hoge = "hogehgoe"
+```
+
 <br />
 <br />
 <br />
@@ -121,3 +129,5 @@ import * as Styles from "../../scss/_box.module.scss"
 <br />
 <br />
 <br />
+
+</main>
