--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -12,121 +12,38 @@ import * as Styles from "../../scss/_box.module.scss"
 
 <main>
 
-# hoge
+# h1タイトル
 
-## こんにちは
+こんにちは。
 
-* <div>1+1={1+1}</div>
-* <div>slug: {props.frontmatter.slug}</div>
-* <div>title: {props.frontmatter.title}</div>
+CSS-Animationと題しましたこのコンテンツ、第一回目はカーソルを合わせた時にスライドアップしてくるボックスです。仕組みが分かってしまえばすごく簡単です。
+
+positionの使い方に慣れるのにぴったりだと思い、第一回目の題材に持ってきました。
+
+## boxクラスとmaskクラスを用意する
+
+外枠としてboxクラス、浮かび上がってくる部分としてmaskクラスを用意します。
+
+maskクラスの中には適当な文字列を入れてあげてください。
 
 
+```html
+<div class="box">
+  ここがboxクラスです
+  <div class="mask">
+    <p class="slideUp">Slide Up</p>
+    <p class="text">Lorem dolor ...略</p>
+  </div>
+&lt;/div&gt;</code>
+```
+
+
+### h3タイトル
 
 ```javascript
 const hoge = "hogehgoe"
 ```
 
-hahaahhhw
-
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+pです。
 
 </main>
