🏃‍♂️ #35 Seoコンポーネントの作成

--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -1,13 +1,15 @@
 ---
-title: "Slide Up"
-slug: "animation01"
+title: "#01 slide Up"
+slug: "01"
 ---
 
 import Component from "../../components/01/index"
 import * as Styles from "../../scss/_box.module.scss"
 
 <div className={Styles.boxWrapper}>
+
 <Component />
+
 </div>
 
 <main>
