--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -5,13 +5,13 @@ date: "2021-10-29"
 update: "2021-10-29"
 ---
 
-import Component from "../../components/01/index"
+import Component01 from "../../components/01/index"
 import PageInfo from "../../components/pageInfo"
 import * as Styles from "../../scss/_box.module.scss"
 
 <div className={Styles.boxWrapper}>
 
-<Component />
+<Component01 />
 
 </div>
 
