--- a/src/posts/02/index.mdx
+++ b/src/posts/02/index.mdx
@@ -1,13 +1,15 @@
 ---
-title: "Slide Up"
-slug: "animation02"
+title: "#02 underline"
+slug: "02"
+date: "2021-11-01"
+update: "2021-11-01"
 ---
 
-import Component from "../../components/01/index"
+import Component02 from "../../components/02/index"
 import * as Styles from "../../scss/_box.module.scss"
 
 <div className={Styles.boxWrapper}>
-<Component />
+<Component02 />
 </div>
 
 # hoge
