--- a/src/posts/01/index.mdx
+++ b/src/posts/01/index.mdx
@@ -5,7 +5,7 @@ date: "2021-10-29"
 update: "2021-10-29"
 ---
 
-import Component01 from "./index"
+import { Component01, Component01a } from "./index"
 import PageInfo from "../../components/pageInfo"
 import * as Styles from "../../scss/_box.module.scss"
 
@@ -145,7 +145,11 @@ CSSを適用させると以下のように表示されるはずです。
 
 これで`mask`にカーソルを乗せた時、`top: 0`の位置まで移動するようにできました。
 
-![](./images/animation01.gif)
+<div className={Styles.boxWrapper} style={{marginBottom: "220px"}}>
+
+<Component01a />
+
+</div>
 
 続けて、`box`からはみ出している部分を隠すために、`overflow-y: hidden`を適用します。
 
